--- a/app/src/main/res/layout/sidemenu_header.xml
+++ b/app/src/main/res/layout/sidemenu_header.xml
@@ -7,10 +7,9 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:tint="@color/colorSecondaryDark"
-        android:background="@color/colorPrimaryDark"
-        android:src="@drawable/ic_action_name"
-        android:scaleType="centerCrop"/>
+        android:src="@drawable/dtu_simple_logo_small"
+        android:contentDescription="@string/settingsLogo"
+        android:scaleType="centerInside" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,20 +20,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="45dp"
-
+            android:layout_marginStart="45dp"
             android:src="@mipmap/ic_flags_denmark"
+            android:contentDescription="@string/settingsDkFlagDesc"
             android:id="@+id/ic_flag_dk"/>
-    <Switch
-        android:id="@+id/header_languageSwitch"
-        android:layout_width="wrap_content"
-        android:layout_gravity="center"
-        android:switchMinWidth="60dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.12" />
+
+        <Switch
+            android:id="@+id/header_languageSwitch"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="0.5" />
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@mipmap/ic_flags_uk"
+            android:contentDescription="@string/settingsUkFlagDesc"
             android:id="@+id/ic_flag_uk"/>
     </LinearLayout>
 </LinearLayout>
