--- a/app/src/main/res/layout/findos_frag.xml
+++ b/app/src/main/res/layout/findos_frag.xml
@@ -88,7 +88,8 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/directionRoute" />
+                android:id="@+id/directionRoute"
+                android:layout_marginBottom="5dp" />
 
             <ListView
                 android:layout_width="match_parent"
