--- a/app/src/main/res/layout/amdcontrol_newitem_addproduct.xml
+++ b/app/src/main/res/layout/amdcontrol_newitem_addproduct.xml
@@ -6,7 +6,7 @@
 
     <TextView
         android:textSize="30sp"
-        android:text="@string/profile_headline"
+        android:text="@string/addNewProduct_headline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -19,10 +19,10 @@
         android:layout_marginStart="40dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/userProfile_email"
+        android:text="@string/addNewProduct_name"
         android:layout_below="@id/headline"
         android:id="@+id/addProduct_name_textview"/>
-    <TextView
+    <EditText
         android:textSize="16sp"
         android:layout_marginLeft="120dp"
         android:layout_marginStart="120dp"
@@ -31,10 +31,10 @@
         android:layout_alignLeft="@id/addProduct_name_textview"
         android:layout_alignStart="@id/addProduct_name_textview"
         android:layout_alignBaseline="@id/addProduct_name_textview"
-        android:id="@+id/emailAddress_editText"/>
+        android:id="@+id/addProduct_name_editText"/>
     <TextView
         android:textSize="16sp"
-        android:text="@string/userProfile_name"
+        android:text="@string/addNewProduct_price"
         android:layout_marginLeft="40dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="40dp"
@@ -51,9 +51,9 @@
         android:layout_alignStart="@id/price_textview"
         android:layout_marginLeft="60dp"
         android:layout_marginStart="60dp"
-        android:id="@+id/name_editText"/>
+        android:id="@+id/price_editText"/>
     <TextView
-        android:text="@string/userProfile_phoneNumber"
+        android:text="@string/addNewProduct_tab"
         android:textSize="16sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -62,7 +62,7 @@
         android:layout_marginTop="40dp"
         android:layout_below="@id/price_textview"
         android:id="@+id/addToTab_textview"/>
-    <EditText
+    <android.support.v7.widget.AppCompatSpinner
         android:textSize="16sp"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
@@ -71,10 +71,10 @@
         android:layout_alignLeft="@id/addToTab_textview"
         android:layout_alignStart="@id/addToTab_textview"
         android:layout_marginStart="120dp"
-        android:id="@+id/phoneNumber_edittext"/>
+        android:id="@+id/addToTab_spinner"/>
     <Button
         android:textSize="16sp"
-        android:text="@string/userProfile_updateProfile"
+        android:text="@string/addNewProduct"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/addToTab_textview"
@@ -82,5 +82,6 @@
         android:layout_marginEnd="40dp"
         android:layout_marginTop="60dp"
         android:background="@color/colorPrimaryDark"
-        android:id="@+id/updateProfile"/>
+        android:id="@+id/addNewProduct_button"/>
 </RelativeLayout>
+
