--- a/app/src/main/res/layout/amdcontrol_newitem_removeproduct.xml
+++ b/app/src/main/res/layout/amdcontrol_newitem_removeproduct.xml
@@ -3,13 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    tools:context="mau.resturantapp.aktivitys.mainFragments.menufrag.MenuHandler_frag">
+    tools:context="mau.resturantapp.aktivitys.mainFragments.adminControls.RemoveProduct_Tabs_frag">
 
     <fragment
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="mau.resturantapp.aktivitys.mainFragments.menufrag.MenuTabsFirebase_frag"
-        tools:layout="@layout/food_menu_frag"
+        android:name="mau.resturantapp.aktivitys.mainFragments.adminControls.RemoveProduct_Tabs_frag"
+        tools:layout="@layout/amdcontrol_removeproduct_productlist"
         android:id="@+id/tabs" />
 
 </FrameLayout>
