--- a/app/src/main/res/layout/user_profile_frag.xml
+++ b/app/src/main/res/layout/user_profile_frag.xml
@@ -1,86 +1,63 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="mau.resturantapp.aktivitys.mainFragments.userControls.userProfile_frag">
 
     <TextView
         android:textSize="30sp"
         android:text="@string/profile_headline"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         android:id="@+id/headline"/>
     <TextView
         android:textSize="16sp"
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginStart="40dp"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/userProfile_email"
         android:layout_below="@id/headline"
         android:id="@+id/addProduct_name_textview"/>
-    <TextView
+    <EditText
         android:textSize="16sp"
-        android:layout_marginLeft="120dp"
-        android:layout_marginStart="120dp"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/addProduct_name_textview"
-        android:layout_alignStart="@id/addProduct_name_textview"
-        android:layout_alignBaseline="@id/addProduct_name_textview"
+        android:hint="New e-mail adress"
+        android:gravity="start"
         android:id="@+id/emailAddress_editText"/>
     <TextView
         android:textSize="16sp"
         android:text="@string/userProfile_name"
-        android:layout_marginLeft="40dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="40dp"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/addProduct_name_textview"
         android:id="@+id/price_textview"/>
     <EditText
         android:textSize="16sp"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@id/price_textview"
-        android:layout_alignLeft="@id/price_textview"
-        android:layout_alignStart="@id/price_textview"
-        android:layout_marginLeft="60dp"
-        android:layout_marginStart="60dp"
+        android:hint="New profile name"
         android:id="@+id/name_editText"/>
     <TextView
         android:text="@string/userProfile_phoneNumber"
         android:textSize="16sp"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="40dp"
-        android:layout_below="@id/price_textview"
         android:id="@+id/addToTab_textview"/>
     <EditText
         android:textSize="16sp"
-        android:layout_width="120dp"
+        android:layout_width="match_parent"
+        android:hint="New phone number"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@id/addToTab_textview"
-        android:layout_marginLeft="120dp"
-        android:layout_alignLeft="@id/addToTab_textview"
-        android:layout_alignStart="@id/addToTab_textview"
-        android:layout_marginStart="120dp"
         android:id="@+id/phoneNumber_edittext"/>
     <Button
         android:textSize="16sp"
         android:text="@string/userProfile_updateProfile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/addToTab_textview"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
         android:layout_marginTop="60dp"
-        android:background="@color/colorPrimaryDark"
+        android:background="@drawable/rounded_corners"
         android:id="@+id/updateProfile"/>
-</RelativeLayout>
+</LinearLayout>
