--- a/app/src/main/res/layout/amdcontrol_accounting.xml
+++ b/app/src/main/res/layout/amdcontrol_accounting.xml
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/orderHistoryGraphTypeChoiceDesc"
-            android:text="Build a graph..... some instructions here." />
+            android:text="Build a graph. " />
 
         <LinearLayout
             android:layout_width="match_parent"
